# uvnb

./: Makefile  README.md  demo.ipynb  pyproject.toml
.github/workflows/: tests.yaml
tests/: test_main.py
uvnb/: __main__.py
